# uni-backend-final-year-project

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conf.json  docker-compose.yml  format.sh  run-cassandra.sh  set_variables.sh
certificates/: jwt_priv_key.pem  jwt_pub_key.pem  server.crt  server.key
documents/: 1-School Engine HLD.docx  2-Database LLD.docx  3-CQL Managers LLD.docx  4-Relationship Managers LLD.docx  5-API LLD.docx  Database Relations.drawio  Final Report Template.docx  Final Report.docx
include/api_managers/: announcement_api_manager.hpp  course_api_manager.hpp  environment_api_manager.hpp  grade_api_manager.hpp  tag_api_manager.hpp  todo_api_manager.hpp  user_api_manager.hpp
include/cql_helpers/: announcements_by_tag_cql_manager.hpp  announcements_cql_manager.hpp  answers_by_announcement_or_question_cql_manager.hpp  answers_cql_manager.hpp  country_cql_manager.hpp  courses_by_user_cql_manager.hpp  courses_cql_manager.hpp  cql_client.hpp  files_cql_manager.hpp  grades_cql_manager.hpp  holiday_cql_manager.hpp  lectures_cql_manager.hpp  questions_by_course_cql_manager.hpp  questions_cql_manager.hpp  school_cql_manager.hpp  student_references_cql_manager.hpp  tags_by_user_cql_manager.hpp  tags_cql_manager.hpp  todos_by_user_cql_manager.hpp  todos_cql_manager.hpp  tokens_cql_manager.hpp  users_by_course_cql_manager.hpp  users_by_tag_cql_manager.hpp  users_cql_manager.hpp
include/database_objects/: announcements_object.hpp  answer_object.hpp  country_object.hpp  course_object.hpp  file_object.hpp  grade_object.hpp  holiday_object.hpp  lecture_object.hpp  question_object.hpp  school_object.hpp  student_reference_object.hpp  tag_object.hpp  todo_object.hpp  user_object.hpp
include/email/: email_manager.hpp
include/relations_managers/: announcement_manager.hpp  course_manager.hpp  environment_manager.hpp  grade_manager.hpp  tag_manager.hpp  todo_manager.hpp  user_manager.hpp
postman-exports/: Announcement Endpoints.postman_collection.json  Country Endpoints.postman_collection.json  Courses Endpoints.postman_collection.json  Grade Endpoint.postman_collection.json  Holiday Endpoints.postman_collection.json  School Endpoints.postman_collection.json  Tag Endpoints.postman_collection.json  Todo Endpoints.postman_collection.json  User Endpoints.postman_collection.json
src/: CMakeLists.txt  main.cpp
src/api_managers/: announcement_api_manager.cpp  course_api_manager.cpp  environment_api_manager.cpp  grade_api_manager.cpp  tag_api_manager.cpp  todo_api_manager.cpp  user_api_manager.cpp
src/cql_helpers/: announcements_by_tag_cql_manager.cpp  announcements_cql_manager.cpp  answers_by_announcement_or_question_cql_manager.cpp  answers_cql_manager.cpp  country_cql_manager.cpp  course_cql_manager.cpp  courses_by_user_cql_manager.cpp  cql_client.cpp  files_cql_manager.cpp  grades_cql_manager.cpp  holiday_cql_manager.cpp  lectures_cql_manager.cpp  questions_by_course_cql_manager.cpp  questions_cql_manager.cpp  school_cql_manager.cpp  student_references_cql_manager.cpp  tags_by_user_cql_manager.cpp  tags_cql_manager.cpp  todos_by_user_cql_manager.cpp  todos_cql_manager.cpp  tokens_cql_manager.cpp  users_by_course_cql_manager.cpp  users_by_tag_cql_manager.cpp  users_cql_manager.cpp
src/database_objects/: announcements_object.cpp  answer_object.cpp  country_object.cpp  course_object.cpp  file_object.cpp  grade_object.cpp  holiday_object.cpp  lecture_object.cpp  question_object.cpp  school_object.cpp  student_reference_object.cpp  tag_object.cpp  todo_object.cpp  user_object.cpp
src/email/: email_manager.cpp
src/relations_managers/: announcement_manager.cpp  course_manager.cpp  environment_manager.cpp  grade_manager.cpp  tag_manager.cpp  todo_manager.cpp  user_manager.cpp
tables/: dowload-tables.sh  environment.countries.csv  environment.holidays_by_country_or_school.csv  environment.schools.csv  schools.announcements.csv  schools.announcements_by_tag.csv  schools.answers.csv  schools.answers_by_announcement_or_question.csv  schools.courses.csv  schools.courses_by_user.csv  schools.files.csv  schools.grades.csv  schools.lectures.csv  schools.questions.csv  schools.questions_by_course.csv  schools.student_reference.csv  schools.tags.csv  schools.tags_by_user.csv  schools.todos.csv  schools.todos_by_user.csv  schools.tokens.csv  schools.users.csv  schools.users_by_course.csv  schools.users_by_tag.csv  upload-tables.sh
tests/: CMakeLists.txt  main_test.cpp
tests/cql_helpers/: test_announcements_by_tag_cql_manager.cpp  test_announcements_cql_manager.cpp  test_answers_by_announcement_or_question_cql_manager.cpp  test_answers_cql_manager.cpp  test_country_cql_manager.cpp  test_courses_by_user_cql_manager.cpp  test_courses_cql_manager.cpp  test_files_cql_manager.cpp  test_grades_cql_manager.cpp  test_holiday_cql_manager.cpp  test_lectures_cql_manager.cpp  test_questions_by_course_cql_manager.cpp  test_questions_cql_manager.cpp  test_school_cql_manager.cpp  test_student_references_cql_manager.cpp  test_tags_by_user_cql_manager.cpp  test_tags_cql_manager.cpp  test_todos_by_user_cql_manager.cpp  test_todos_cql_manager.cpp  test_tokens_cql_manager.cpp  test_users_by_course_cql_manager.cpp  test_users_by_tag_cql_manager.cpp  test_users_cql_manager.cpp
